tests/errors/sem.arg-count-mismatch.ptrdiff.or
main :: () -> void {
    x := 9;
    y := 3;
    ptrdiff(&x, &y, &x);
};
